--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Главная Cat Energy</title>
 </head>
 
@@ -160,7 +160,7 @@
       </a>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 
 </html>
