--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,9 +11,9 @@
 <body class="page__body">
   <header class="page-header">
     <div class="container page-header__container">
-      <a class="page-header__logo  logo" href="index.html">
-        <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
-        <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
+      <a class="page-header__logo logo" href="index.html">
+        <img class="logo__image logo__image--icon" src="images/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
+        <img class="logo__image-title" src="images/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
       <nav class="main-nav main-nav--is-close main-nav--nojs">
         <button class="btn-burger">
@@ -37,7 +37,7 @@
         <ul class="catalog__list">
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="img/catalog-chicken-small.png" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-курица.">
+              <img class="product__image" src="images/catalog-chicken-small.png" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-курица.">
             </a>
             <div class="catalog__wrapper">
               <a class="product__link" href="#">
@@ -56,7 +56,7 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="img/catalog-chicken-big.png" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-курица">
+              <img class="product__image" src="images/catalog-chicken-big.png" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-курица">
             </a>
             <div class="catalog__wrapper">
               <a class="product__link" href="#">
@@ -75,7 +75,7 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="img/catalog-fish-small.png" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-рыба.">
+              <img class="product__image" src="images/catalog-fish-small.png" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-рыба.">
             </a>
             <div class="catalog__wrapper">
               <a class="product__link" href="#">
@@ -94,7 +94,7 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="img/catalog-fish-big.png" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-рыба">
+              <img class="product__image" src="images/catalog-fish-big.png" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-рыба">
             </a>
             <div class="catalog__wrapper">
               <a class="product__link" href="#">
@@ -113,7 +113,7 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="img/catalog-buckwheat-small.png" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-гречка.">
+              <img class="product__image" src="images/catalog-buckwheat-small.png" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-гречка.">
             </a>
             <div class="catalog__wrapper">
               <a class="product__link" href="#">
@@ -132,7 +132,7 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="img/catalog-buckwheat-big.png" alt="Рацион 1000 гамм. Cat Energy Slim. Вкус-гречка">
+              <img class="product__image" src="images/catalog-buckwheat-big.png" alt="Рацион 1000 гамм. Cat Energy Slim. Вкус-гречка">
             </a>
             <div class="catalog__wrapper">
               <a class="product__link" href="#">
@@ -151,7 +151,7 @@
           </li>
           <li class="catalog__item product">
             <a class="product__image-wrapper" href="#">
-              <img class="product__image" src="img/catalog-rice-small.svg" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-рис">
+              <img class="product__image" src="images/catalog-rice-small.svg" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-рис">
             </a>
             <div class="catalog__wrapper">
               <a class="product__link" href="#">
@@ -240,13 +240,13 @@
       </div>
       <div class="map">
         <h2 class="visually-hidden">Схема проезда</h2>
-        <!--<picture><img src="../source/img/alt-location.png" width="320" height="362"></picture>-->
+        <!--<picture><img src="../source/images/alt-location.png" width="320" height="362"></picture>-->
         <iframe class="map__frame" src="https://yandex.ru/map-widget/v1/?ll=30.321279%2C59.939728&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&sctx=ZAAAAAgBEAAaKAoSCTpdFhObFz1AEc8xIHu9801AEhIJZR2OrtLdyz8RfCk8aHbdwT8iBgABAgMEBSgKOABA5a4HSAFiSHJlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vTWVkaWFGbG93L1N0b3JpZXNDb250ZW50VHlwZT1vbGRfbWVkaWFfY2xhc3NpZmllcmoCcnWdAc3MTD2gAQCoAQC9Af0QG6HCAR67t8jOpgLTrNeb5AbG1I3fwASjq%2FbB7AH4q77E7AKCAinQlNC%2B0LHQsNCy0LjRgtGMINC60LDRgNGC0YMg0L3QsCDRgdCw0LnRgooCAJICAJoCDGRlc2t0b3AtbWFwcw%3D%3D&sll=30.321279%2C59.939728&source=serp_navig&sspn=0.046704%2C0.013039&tab=inside&text=%D0%94%D0%BE%D0%B1%D0%B0%D0%B2%D0%B8%D1%82%D1%8C%20%D0%BA%D0%B0%D1%80%D1%82%D1%83%20%D0%BD%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82&z=15.4"></iframe>
       </div>
     </section>
     <div class="container footer__link-container">
       <a class="logo footer__logo" href="index.html" aria-current="page">
-        <img class="logo__image-footer" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
+        <img class="logo__image-footer" src="images/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
       <div class="social">
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
@@ -269,8 +269,8 @@
         </ul>
       </div>
       <a class="footer__dev" href="#">
-        <p class="footer__dev__name">HTML Academy</p>
-        <img class="footer__dev__img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
+        <p class="footer__dev-name">HTML Academy</p>
+        <img class="footer__dev-img" width="27" height="34" src="images/logo-htmlacademy.svg" alt="Логотип разработчика">
       </a>
     </div>
   </footer>
