--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,8 @@
   <header class="page-header page-header--index">
     <div class="container page-header__container">
       <a class="page-header__logo logo" href="index.html" aria-current="page">
-        <img class="logo__image logo__image--icon" src="ima/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
-        <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
+        <img class="logo__image logo__image--icon" src="images/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
+        <img class="logo__image-title" src="images/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
       <nav class="main-nav main-nav--is-close main-nav--nojs">
         <button class="btn-burger">
@@ -38,7 +38,7 @@
       <div class="container promo__container">
         <h1 class="promo__title">Функциональное<br>питание для котов</h1>
         <p class="promo__slogan">Занялся собой? Займись котом!</p>
-        <img class="promo__content-image" src="img/index-can-energy-chicken.png" width="280" height="270" alt="Промо изображение. Порция питания для котов Cat Energy Pro. С курицей. 500 грамм.">
+        <img class="promo__content-image" src="images/index-can-energy-chicken.png" width="280" height="270" alt="Промо изображение. Порция питания для котов Cat Energy Pro. С курицей. 500 грамм.">
         <a class="promo__button button" href="form.html">Подобрать&nbsp;программу</a>
       </div>
     </section>
@@ -104,9 +104,9 @@
         </div>
         <div class="slider">
           <div class="slider__images">
-            <img class="slider__before" src="img/well-fed-cat.png" width="592" height="512" alt="Фотография кота Бориса до замены обычного корма на корм Cat Energy.">
-            <!--<img class="slider__before" src="img/well-fed-cat.png" width="592" height="512" alt="Фотография кота Бориса до замены обычного корма на корм Cat Energy.">-->
-            <!--<img class="slider__after" src="img/cat-lost-weight.png" width="592" height="512" alt="Фотография кота Бориса сбросившего 5 килограмм через 2 месяца на диете Cat Energy">-->
+            <img class="slider__before" src="images/well-fed-cat.png" width="592" height="512" alt="Фотография кота Бориса до замены обычного корма на корм Cat Energy.">
+            <!--<img class="slider__before" src="images/well-fed-cat.png" width="592" height="512" alt="Фотография кота Бориса до замены обычного корма на корм Cat Energy.">-->
+            <!--<img class="slider__after" src="images/cat-lost-weight.png" width="592" height="512" alt="Фотография кота Бориса сбросившего 5 килограмм через 2 месяца на диете Cat Energy">-->
           </div>
           <div class="slider__compare">
             <button class="slider__images-compare">до после</button>
@@ -126,13 +126,13 @@
       </div>
       <div class="map">
         <h2 class="visually-hidden">Схема проезда</h2>
-        <!--<picture><img src="../source/img/alt-location.png" width="320" height="362"></picture>-->
+        <!--<picture><img src="../source/images/alt-location.png" width="320" height="362"></picture>-->
         <iframe class="map__frame" src="https://yandex.ru/map-widget/v1/?ll=30.321279%2C59.939728&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&sctx=ZAAAAAgBEAAaKAoSCTpdFhObFz1AEc8xIHu9801AEhIJZR2OrtLdyz8RfCk8aHbdwT8iBgABAgMEBSgKOABA5a4HSAFiSHJlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vTWVkaWFGbG93L1N0b3JpZXNDb250ZW50VHlwZT1vbGRfbWVkaWFfY2xhc3NpZmllcmoCcnWdAc3MTD2gAQCoAQC9Af0QG6HCAR67t8jOpgLTrNeb5AbG1I3fwASjq%2FbB7AH4q77E7AKCAinQlNC%2B0LHQsNCy0LjRgtGMINC60LDRgNGC0YMg0L3QsCDRgdCw0LnRgooCAJICAJoCDGRlc2t0b3AtbWFwcw%3D%3D&sll=30.321279%2C59.939728&source=serp_navig&sspn=0.046704%2C0.013039&tab=inside&text=%D0%94%D0%BE%D0%B1%D0%B0%D0%B2%D0%B8%D1%82%D1%8C%20%D0%BA%D0%B0%D1%80%D1%82%D1%83%20%D0%BD%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82&z=15.4"></iframe>
       </div>
     </section>
     <div class="container footer__link-container">
       <a class="logo footer__logo" href="index.html" aria-current="page">
-        <img class="logo__image-footer" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
+        <img class="logo__image-footer" src="images/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
       <div class="social">
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
@@ -156,7 +156,7 @@
       </div>
       <a class="footer__dev" href="#">
         <p class="footer__dev-name">HTML Academy</p>
-        <img class="footer__dev-img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
+        <img class="footer__dev-img" width="27" height="34" src="images/logo-htmlacademy.svg" alt="Логотип разработчика">
       </a>
     </div>
   </footer>
