--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,9 +13,15 @@
 <body class="page__body">
   <header class="page-header">
     <div class="container page-header__container">
-      <a class="page-header__logo logo" href="index.html">
-        <img class="logo__image logo__image--icon" src="images/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
-        <img class="logo__image-title" src="images/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
+      <a class="page-header__logo logo" href="index.html" aria-current="page">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="images/logo-tablet.svg">
+          <img class="logo__image logo__image--icon" src="images/logo-mobile.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
+        </picture>
+        <svg class="logo__image-title" width="101" height="18" alt="Логотип Cat Energy">
+          <use href="../icons/stack.svg#logo-title"></use>
+        </svg>
       </a>
       <nav class="main-nav main-nav--is-close main-nav--nojs">
         <button class="btn-burger" type="button">
